--- a/css/all.css
+++ b/css/all.css
@@ -8,3 +8,70 @@ body {
     padding-left: 12px;
     padding-right: 12px;
 }
+
+.logo {
+    display: block;
+    width: 80px;
+    height: 48px;
+    text-indent: 101%;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.pd-y-3 {
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+/* flex */
+
+.d-flex {
+    display: flex;
+}
+
+.jcsb {
+    justify-content: space-between;
+}
+
+.aic {
+    align-items: center;
+}
+
+
+/* font */
+
+.fz-20 {
+    font-size: 20px;
+}
+
+.ft-wt {
+    color: #ffffff;
+}
+
+.bg-red {
+    background: #AA0601;
+}
+
+
+/* header */
+
+.header h1 a{
+    background-image: url(../image/logo-white.png);
+    background-size: cover;
+}
+
+.menu {
+    width: 39%;
+}
+
+.menu li {
+    width: 16%;
+}
+
+.menu li a {
+    text-decoration: none;
+}
+
+.menu li a:hover {
+    color: #000000;
+}
