revised breakpoint to 992px & 767px

--- a/css/all.css
+++ b/css/all.css
@@ -13,12 +13,13 @@ body {
     margin: 0 auto;
     padding: 0 12px;
     /* 平板 */
-    @media (max-width: 768px) {
-        max-width: 720px; /* 696 + 24 gutter */
+    @media (max-width: 992px) {
+        max-width: 100%;
+    
     }
     /* 手機 */
-    @media (max-width: 375px) {
-        max-width: 372px; /* 348 + 24 gutter */
+    @media (max-width: 767px) {
+        max-width: 100%;
     }
 }
 
@@ -62,7 +63,7 @@ a {
 .navbar {
     padding: 16px 0;
     /* 去除手機版padding bottom */
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
         padding-bottom: 0;
     }
 }
@@ -71,7 +72,7 @@ a {
     display: flex;
     justify-content: space-between;
     /* 小於768轉成手機排版 */
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
         flex-direction: column;
         /* 移除左右 padding 再加入 max-width: 100%; 讓導覽列能變為滿版 */
         padding-left: 0;
@@ -90,7 +91,7 @@ a {
     overflow: hidden;
     white-space: nowrap;
 
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
         margin: 0 0 16px 16px;
     }
 }
@@ -99,7 +100,7 @@ a {
     display: flex;
     align-items: center;
 
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
         flex-wrap: wrap;
     }
 }
@@ -107,7 +108,7 @@ a {
 .navbar-item {
     height: 100%;
 
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
         width: 50%;
         margin-right: 0;
         border: 1px solid #ffffff;
@@ -117,13 +118,10 @@ a {
 .navbar-link {
     height: 100%;
     display: block;
-    font-size: 20px;
-    color: #ffffff;
     text-decoration: none;
     padding: 8px 32px;
 
-
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
         font-size: 16px;
         text-align: center;
         padding: 12px 0;
@@ -150,11 +148,11 @@ a {
     padding-top: 48px;
     padding-bottom: 32px;
 
-    @media (max-width: 768px) {
+    @media (max-width: 992px) {
         padding-bottom: 40px;
     }
 
-    @media (max-width: 375px) {
+    @media (max-width: 767px) {
         padding: 24px 0;
     }
 }
@@ -164,7 +162,7 @@ a {
     justify-content: space-between;
     margin-bottom: 32px;
 
-    @media (max-width: 375px) {
+    @media (max-width: 767px) {
         margin-bottom: 24px;
     }
 }
@@ -172,10 +170,14 @@ a {
 /* 可在外層用margin:-24px或是指定.footer-nav最後一個li來把padding-left設定成0來抵銷gutter */
 .footer-nav {
     display: flex;
-    margin-bottom: 33px;
+    margin-bottom: 36px;
     margin-left: -24px;
 
-    @media (max-width: 375px) {
+    @media (max-width: 992px) {
+        margin-bottom: 32px;
+    }
+
+    @media (max-width: 767px) {
         display: none;
     }
 }
@@ -188,10 +190,9 @@ a {
     display: block;
     padding: 12px 24px;
 
-    @media (max-width: 768px) {
+    @media (max-width: 992px) {
         padding: 8px 24px;
     }
-
 }
 
 .footer-contact li a {
@@ -199,7 +200,7 @@ a {
     align-items: center;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 767px) {
     .footer-contact a span {
         font-size: 16px;
     }
@@ -207,6 +208,10 @@ a {
 
 .footer-contact li .mr-4 {
     margin-right: 16px;
+
+    @media (max-width: 767px) {
+        margin-right: 8px;
+    }
 }
 
 .footer-socialLink {
@@ -218,12 +223,12 @@ a {
     width: 48px;
     margin-right: 32px;
 
-    @media (max-width: 768px) {
+    @media (max-width: 992px) {
         width: 40px;
         margin-right: 16px;
     }
 
-    @media (max-width: 375px) {
+    @media (max-width: 767px) {
         width: 24px;
         margin-right: 8px;
     }
@@ -240,7 +245,7 @@ a {
     padding-top: 32px;
     border-top: 1px solid #ffffff;
 
-    @media (max-width: 375px) {
+    @media (max-width: 767px) {
         flex-direction: column;
         justify-content: flex-start;
         align-items: start;
@@ -251,7 +256,7 @@ a {
 .policy-item {
     display: flex;
 
-    @media (max-width: 375px) {
+    @media (max-width: 767px) {
         display: block;
     }
 }
@@ -260,7 +265,7 @@ a {
     display: block;
     padding: 1px 24px;
 
-    @media (max-width: 375px) {
+    @media (max-width: 767px) {
         padding: 0;
         font-size: 16px;
         margin-top: 8px;
